<resources>
    <string name="app_name">SociallySafe</string>
    <string name="number_of_guests">Number of Guests:</string>
    <string name="join_the_queue">Join The Queue</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email_address">Email Address:</string>
    <string name="mobile_number">Mobile Number:</string>

    <string-array name="Num_Guests">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="status">
        <item>@drawable/spinner_queue</item>
        <item>@drawable/spinner_contact</item>
        <item>@drawable/spinner_late</item>
    </string-array>

    <string name="title_activity_confirmation">Confirmation</string>
    <string name="leave_queue">Leave Queue</string>
    <string name="retrieve_data">Retrieve Data</string>
    <string name="save_details">Save Details</string>
    <string name="name">Name:</string>
    <string name="mobile_number1">Mobile Number:</string>
    <string name="party_size">Party Size:</string>
    <string name="time">Time:</string>
    <string name="wait_time">Wait Time:</string>
    <string name="update_details">Update Details</string>
    <string name="name1">Name:</string>
    <string name="email2">Email:</string>
    <string name="mobile_number3">Mobile Number:</string>
    <string name="party_size4">Party Size:</string>
    <string name="update">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="surname">Surname:</string>
    <string name="welcome_to_socially_safe">Welcome to Socially Safe</string>
    <string name="edit_business_page">Edit Business Page</string>
    <string name="manage_queue">Manage Queue</string>
    <string name="business_logo">Business Logo</string>
    <string name="log_in">Log In</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="password1">Password</string>
    <string name="email1">Email</string>
    <string name="register">Register</string>
    <string name="title_activity_user__log_in">User_LogIn</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>